# Sandbox

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_back.txt  Sandbox.sln
Assets/: Test.scene
Assets/Models/: MonkeyHead.mtl  uvsphere.fbx
Assets/Scenes/: Test.scene
Assets/Settings/: rendering.yaml
Assets/Shaders/: BlitDepth.frag  BlitDepth.vert  Cubemaps.frag  Cubemaps.vert  EquirectangularMap.vert  FillModeNonSolid.frag  FillModeNonSolid.vert  FillModeNonSolidGrid.vert  Gizmo.vert  PBR.frag  PBR.vert  TextureView.frag  TextureView.vert
Assets/Shaders/PostProcess/: PostProcessingGaussianBlur.frag  PostProcessingGrayscale.frag  PostProcessingSharpen.frag
Assets/Textures/Icon/: manipulation_source.kra
BuildProject/: CompileAllShaders.ps1  CopyAssets.ps1  CopyFiles.ps1
BuildProject/whiterice_workspace/: config.proto  generate_config.py  generate_config_and_run.py
BuildProject/whiterice_workspace/cookbook/: cmake_process.py  copy_dlls.py  pipe_worker.py  refureku_generator.py
Plugins/JoltPhysics/: JoltPhysics.project.yaml
Plugins/assimp-5.2.5/: assimp.module.yaml  assimp.project.yaml
Plugins/boost/: hana.project.yaml
Plugins/glfw-3.3.9.bin.WIN64/: CMakeLists.txt  glfw.module.yaml  glfw.project.yaml
Plugins/glm-0.9.9.8/: CMakeLists.txt  glm.module.yaml  glm.project.yaml
Plugins/glm-0.9.9.8/MinSizeRel/: glm_static.lib
Plugins/glslang/: glslang.project.yaml
Plugins/imgui/: imgui.module.yaml  imgui.project.yaml
Plugins/imguizmo/: imguizmo.project.yaml
Plugins/ktx/: ktx.project.yaml
Plugins/refureku/: RefurekuSettings.toml  refureku.project.yaml
Plugins/stb_image/: CMakeLists.txt  stb.module.yaml  stb.project.yaml
Plugins/vulkan-1.3.268/: CMakeLists.txt  vulkan.module.yaml  vulkan.project.yaml
Plugins/yaml-cpp-0.8.0/: yamlcpp.project.yaml
Programs/SandboxPipeWorker/: SandboxPipeWorker.cs  SandboxPipeWorker.csproj  SandboxPipeWorker.sln
Programs/SandboxPipeWorker/Common/: DirectoryReference.cs  FileReference.cs  FileSystemBase.cs  Log.cs  YamlExtensions.cs
Source/: Image.cpp  Main.cpp  Mesh.cpp  Model.cpp  NativeFileSystem.cpp
Source/Include/: Camera.h  Image.h  Mesh.h  Model.h  NativeFileSystem.h
Source/Infrastructures/: NativeFileSystem.hpp
Source/Rendering/: CMakeLists.txt  Camera.hpp  Graphics.hpp  Image.cpp  Image.hpp  Mesh.hpp  Model.cpp  Model.hpp  Rendering.module.yaml
Source/Shaders/: CompileAll.ps1  CompileAllShaders.ps1  Test.vert
Sources/: .gitignore  Main.cpp  PostBuildCommands.ps1  RefurekuSettings.toml  Sandbox.module.yaml  Sandbox.project.yaml  Sandbox.vcxproj  imgui.ini  pch.hpp
Sources/Editor/: ApplicationEditor.cpp  ApplicationEditor.hpp  Editor.cpp  Editor.hpp  GizmoEditor.cpp  GizmoEditor.hpp  Grid.cpp  Grid.hpp  IEditor.cpp  IEditor.hpp  IImGuiWindow.cpp  IImGuiWindow.hpp  ImGuiExamples.cpp  ImGuiExamples.hpp  ImGuiRenderer.cpp  ImGuiRenderer.hpp  OverlayEditor.cpp  OverlayEditor.hpp  SettingsEditor.cpp  SettingsEditor.hpp  TransformGizmo.cpp  TransformGizmo.hpp  ValueEditor.cpp  ValueEditor.hpp
Sources/Engine/: BasicMeshData.cpp  BasicMeshData.hpp  Camera.cpp  Camera.hpp  Concepts.hpp  Engine.cpp  Engine.hpp  Image.cpp  Image.hpp  KtxImage.cpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PostProcess.cpp  PostProcess.hpp  Skybox.cpp  Skybox.hpp  StbImageImpl.cpp  Timer.cpp  Timer.hpp
Sources/FileSystem/: Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileSystemBase.cpp  FileSystemBase.hpp  Logger.cpp  Logger.hpp
Sources/GameCore/: Engine.cpp  Engine.hpp  GameObject.cpp  GameObject.hpp  IComponent.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp  Vertex.cpp  Vertex.hpp
Sources/Infrastructures/: CMakeLists.txt  CollisionDetect.cpp  CollisionDetect.hpp  DataBinding.cpp  DataBinding.hpp  Delegate.cpp  Delegate.hpp  FileSystemBase.cpp  FileSystemBase.hpp  ISerializable.cpp  ISerializable.hpp  Infrastructures.module.yaml  NativeFileSystem.cpp  NativeFileSystem.hpp  Serialization.cpp  Serialization.hpp  Shared.hpp  SingletonOrganizer.cpp  SingletonOrganizer.hpp  String.cpp  String.hpp  Timer.cpp  Timer.hpp  Transform.cpp  Transform.hpp  TypeTraits.hpp
Sources/Infrastructures/FileSystem/: Directory.cpp  Directory.hpp  File.cpp  File.hpp  FileSystemBase.cpp  FileSystemBase.hpp  Logger.cpp  Logger.hpp
Sources/Infrastructures/Math/: AABB.hpp  Plane.cpp  Plane.hpp  Quaternion.cpp  Quaternion.hpp  Ray.hpp
Sources/Math/: Quaternion.cpp  Quaternion.hpp  Vector3.cpp  Vector3.hpp
Sources/Misc/: BoundingBox.cpp  BoundingBox.hpp  CollisionDetection.cpp  CollisionDetection.hpp  DataBinding.cpp  DataBinding.hpp  Debug.cpp  Debug.hpp  Delegate.cpp  Delegate.hpp  Event.cpp  Event.hpp  GlmExtensions.cpp  GlmExtensions.hpp  Hasher.cpp  Hasher.hpp  Math.hpp  Memory.cpp  Memory.hpp  PriorityEvent.cpp  PriorityEvent.hpp  Ray.cpp  Ray.hpp  String.cpp  String.hpp  TypeCasting.hpp  TypeTraits.hpp
Sources/Platform/: GlfwCallbackBridge.cpp  GlfwCallbackBridge.hpp  InputQueue.cpp  InputQueue.hpp  Window.cpp  Window.hpp
Sources/Rendering/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  CubeMap.cpp  CubeMap.hpp  Graphics.cpp  Graphics.hpp  Image.cpp  Image.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp  RendererSettings.cpp  RendererSettings.hpp  Rendering.module.yaml  Settings.cpp  Settings.hpp  Shared.hpp  Vertex.cpp  Vertex.hpp  ViewMode.hpp
Sources/Serialization/: ISerializable.cpp  ISerializable.hpp  List.cpp  List.hpp  SharedPtr.cpp  SharedPtr.hpp
Sources/Shaders/: EquirectangularMap.frag  FillModeNonSolid.frag  FillModeNonSolid.vert  FillModeNonSolidGrid.vert  FillModeNonSolidTransformGizmo.vert  PBR.frag  Test.vert
Sources/Standard/: Dictionary.hpp  String.cpp  String.hpp
Sources/Supports/: YamlGlmConverter.cpp  YamlGlmConverter.hpp  YamlWithGlm.cpp
Sources/TestRefureku/: TestProperty.cpp  TestProperty.hpp
Sources/VulkanRHI/: Renderer.cpp  Renderer.hpp
(+250 files in other folders)
